@@ -7,6 +7,7 @@ MovieJukebox 2.3 BETA
  - Enhancement   #997 Ability to turn off 'EXTRAS' processing
  - Enhancement  #1131 Smarter location of set artwork
  - Fixed defect #1267 Titles from IMDB may include their (year/roman numeral) format
+ - Fixed defect #1629 Rating problem with allocine plugin
  - Fixed defect #1604 Set poster is not picked up correctly for series with ":" in the name
  - Fixed defect #1655 ComingSoon plugin not run properly
  - Enhancement  #1671 Add New:TV and New:Movies categories
